[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cartographer"
version = "0.1.0"
description = "A modular recon CLI for learning DNS/WHOIS, subdomain enumeration, port scanning, and HTTP fingerprinting."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "dnspython",
    "python-whois",
    "python-nmap",
]

[project.scripts]
cartographer = "cartographer.cli:main"

[tool.setuptools.packages.find]
include = ["cartographer*"]

[tool.setuptools.package-data]
cartographer = ["wordlists/*.txt"]
